# sustainable-dc

./: ARIMA_pred.ipynb  FMI_grid.ipynb  FMI_preprocessing.ipynb  FMI_station_map.ipynb  FMI_water_temperatures_processing.ipynb  OSM_POIs.ipynb  README.md  fill_in_missing_value.ipynb  finland_administrative_boundaries_national_polygon.shp  proximity.ipynb  pyproject.toml  score.ipynb  wind_components.ipynb  wind_prediction_projection.ipynb
data/wind/: finland.geojson
