[tool.poetry]
name = "sustainable-dc"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.1"
tqdm = "^4.66.2"
numpy = "^1.26.4"
geopandas = "^0.14.3"
fmiopendata = "^0.4.3"
rasterio = "^1.3.9"
xarray = "^2024.2.0"
rioxarray = "^0.15.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
shapely = "^2.0.3"
adjusttext = "^1.0.4"
joblib = "^1.3.2"
eccodes = "^1.7.0"
pyproj = "^3.6.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
